--- a/pann/1/index.html
+++ b/pann/1/index.html
@@ -58,6 +58,6 @@
   <audio data-key="75" src="sounds/tom.wav"></audio>
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
-
+  <script src="script.js"></script>
 </body>
 </html>
