--- a/nonwiz/1/index.html
+++ b/nonwiz/1/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <title>Key code informer</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css">
-  <script src="./script.js"></script>
+  <script src="https://j30.vercel.app/nonwiz/1/script.js"></script>
   <link rel="icon" href="https://fav.farm/🔥" />
   <style>
     .flex {
