chore: Update script URLs for dan/1 and dan/2

--- a/dan/2/index.html
+++ b/dan/2/index.html
@@ -37,6 +37,6 @@
     <span id='time-seconds' class=" text-4xl tabular-nums""></span>
 
 
-      <script src="script.js"></script>
+      <script src="/dan/2/script.js"></script>
 </body>
 </html>
