feat: add dynamic navigation generator

--- a/dan/1/index.html
+++ b/dan/1/index.html
@@ -6,16 +6,17 @@
   <!-- <link rel="stylesheet" href="style.css"> -->
   <link rel="icon" href="https://fav.farm/🔥" />
   <script src="https://cdn.tailwindcss.com"></script>
+ <script src="/dan/memo/navigation.js"></script>
+
 </head>
 <body>
 
-  <main class="bg-[#22514C] w-dvh h-dvh mx-auto flex justify-center items-center">
       <section class="text-white border p-8 rounded-md">
         <p>Hello World, press anything on your keyboard!! </p>
       </section>
-  </main>
 
  <script src="/dan/1/script.js"></script>
+
 
 </body>
 </html>
