--- a/pann/1/index.html
+++ b/pann/1/index.html
@@ -3,13 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <title>JS Drum Kit</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/pann/1/style.css">
   <link rel="icon" href="https://fav.farm/🔥" />
+  <script src="https://cdn.tailwindcss.com"></script>
+
 </head>
-<body>
+<body class="bg-white/40">
 
 
-  <div class="keys">
+  <div class="keys flex flex-col">
     <div data-key="65" class="key">
       <kbd>A</kbd>
       <span class="sound">clap</span>
