chore: Update script URLs for nonwiz/1

--- a/nonwiz/1/index.html
+++ b/nonwiz/1/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <title>Key code informer</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css">
-  <script src="https://j30.vercel.app/nonwiz/1/script.js"></script>
+  <script src="/nonwiz/1/script.js"></script>
   <link rel="icon" href="https://fav.farm/🔥" />
   <style>
     .flex {
@@ -39,6 +39,7 @@
     <section id="histories" class="flex flex-row gap-2">
     </section>
     <p>Try type something and press enter.</p>
+    <input type="text" id="input" class="input" />
     <ul>
       <li>Enter: Read things out</li>
       <li>Backspace: Clear things up</li>
