feat: add day 6

--- a/nonwiz/6/index.html
+++ b/nonwiz/6/index.html
@@ -64,7 +64,7 @@
         }
       }
       participants = updatedParticipants;
-      displayChallenges(participants);
+      displayChallenges(updatedParticipants);
       localStorage.setItem("participants", JSON.stringify(updatedParticipants));
 
     });
