--- a/nonwiz/6/index.html
+++ b/nonwiz/6/index.html
@@ -78,7 +78,7 @@
         section.innerHTML = `
           <h2>${key}</h2>
           <ul>
-            ${participants[key].map(p => `<li><a href="${p.href}" target="_blank">${p.title}</a></li>`).join("")}
+            ${participants[key].filter(i => i.title && i.title.length > 0).map(p => `<li><a href="${p.href}" target="_blank">${p.title}</a></li>`).join("")}
           </ul>
         `;
         main.appendChild(section);
